# manim-utils

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
src/manim_utils/: __init__.py  animations.py  code.py  groups.py  mobjects.py  stencil.py
src/manim_utils/ui/: __init__.py  buttons.py  cursor.py
src/manim_utils/ui/assets/cursors/: source
tests/: animations_test.py  code_test.py  groups_test.py
tests/ui/: buttons_test.py  cursor_test.py
