[project]
name = "manim-utils"
version = "0.1.0"
description = "A collection of manim utilities."
authors = [
      {name="maejam", email = "git.rejoice553@passmail.net"},
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10, <3.14"
dependencies = [
    "manim>=0.19.0",
    "types-pygments>=2.19.0.20251121",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
]

[project.entry-points."manim.plugins"]
manim_utils = "manim_utils.main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "tests/",
    "uv.lock"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "error",
    "ignore:The '__version__' attribute is deprecated and will be removed in Click 9.1:DeprecationWarning", # cloup
    "ignore:invalid escape sequence:DeprecationWarning", # pydub
    "ignore:invalid escape sequence:SyntaxWarning", # pydub
    "ignore:'audioop' is deprecated and slated for removal:DeprecationWarning", # audioop
]

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.mypy]
files = ["src"]
show_error_codes = true
pretty = true
strict = true
follow_untyped_imports = true

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle error
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "PT",   # flake8-pytest-style
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warning
]

ignore = [
    "D1",   # undocumented public ...
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",    # missing docstring
    "F841", # unused-variable
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
